feat: improve card + improve tokens page doc

--- a/src/pages/tokens.html
+++ b/src/pages/tokens.html
@@ -184,7 +184,7 @@
             Les utilitaires <code>.u-lh-*</code> pointent vers les tokens <code>--tlh-*</code> qui sont <em>remappés</em> selon le mode choisi.
         </p>
 
-        <h3>Line Heights — Basic</h3>
+        <h4 class="u-my-2">Line Heights — Basic</h4>
         <ltds-code-block language="css" dedent>
         :root {
             --lh-0: 1;
@@ -201,7 +201,7 @@
             --lh-prc-4: 200%;
         }
         </ltds-code-block>
-        <h3>Line Heights — Alternative (Modular Scale pairing)</h3>
+        <h4 class="u-my-2">Line Heights — Alternative (Modular Scale pairing)</h4>
         <ltds-code-block language="css" dedent>
         :root {
             --line-height-0: 1.1;
