feat: adding a searchbar and search component !

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -44,7 +44,8 @@
   <div class="lt-frame lt-frame--fantasy reveal --scale" style="position: relative;">
     <!-- <div class="lt-frame-inset-gradient"></div> -->
     <div class="lt-frame-content">
-      <doc-section title="Get started !" extra-class="--start">
+      <!-- extra-class="--start" -->
+      <doc-section title="Get started !">
         <p>
           Installez le Design System via npm et commencez à l’utiliser immédiatement.  
           Vous pouvez importer la feuille de style complète ou seulement les parties qui vous intéressent grâce au <em>tree-shaking</em>.
@@ -56,7 +57,8 @@
   
       <ltds-divider></ltds-divider>
   
-      <doc-section title="Usage CSS" extra-class="--end">
+      <!-- extra-class="--end" -->
+      <doc-section title="Usage CSS">
         <p>Importer tout le Design System :</p>
         <ltds-code-block language="js" dedent>
         import '@tarik-leviathan/ltds/dist/ltds.css';
