--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -4,14 +4,14 @@
             <img id="page-logotype" src="/assets/pictures/logotype.svg" alt="logo" width="48">
         </a>
     </div>
-    <div class="navbar-right">
+    <div class="navbar-right lt-stack lt-stack--center">
+        <search-bar></search-bar>
         <!-- menu desktop  -->  
-
         <ul class="ltds-menu u-display-mob-none">
             <li>
                 <div class="ltds-menu-label">Bases<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
                 <ul class="ltds-menu-submenu">
-                    <h3 class="u-col-span-12 ltds-menu-item">Master the bases</h3>
+                    <h3 class="u-col-span-12 u-mb-1">Master the bases</h3>
                     <div id="desktop-menu" class="u-grid u-grid-12"></div>
                 </ul>
             </li>
@@ -19,7 +19,7 @@
             <li>
                 <div class="ltds-menu-label">Themes<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
                 <ul class="ltds-menu-submenu">
-                    <h3 class="ltds-menu-item">Select a theme</h3>
+                    <h3 class="u-mb-1">Select a theme</h3>
                     <div class="lt-stack lt-stack--gap-2">
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="0">Theme 0</div>
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="1">Iris Mist</div>
