fix : close button icon (too large) and version display

--- a/src/parts/footer.html
+++ b/src/parts/footer.html
@@ -1,5 +1,4 @@
 <footer class="ltds-footer u-min-h-l-4 lt-frame lt-frame--items-center lt-frame--center">
-    <div>Version: <span class="u-text-info" data-version="ltds"></span> - LTDS Design System © 2025</div>
-    <div >Portfolio Version: <span class="u-text-info" data-version="portfolio"></span></div>
+    <div>Version: <span class="u-text-info" data-version="portfolio"></span> - LTDS Design System © 2025</div>
     <!-- <p>LTDS Design System </p> -->
 </footer>
