--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -59,6 +59,8 @@
                             <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline" data-scheme="2">Azure deep</div>
                         </div>
                     </div>
+                    <ltds-divider></ltds-divider>
+                    <div class="u-fs-1">LTDS version: <span class="u-text-success" data-version="ltds"></span></div>
                 </div>
             </div>
         </panel-menu>
