--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div class="lt-frame lt-frame--gap-6">
         <!-- <p class="u-min-h-160">modal test</p> -->
         <p id="jumbo-description-2" class="u-text-secondary u-lh-2">Mon expertise couvre l’ensemble du cycle de développement front-end, depuis la création d’interfaces responsives jusqu’à la conception et la maintenance de design systems évolutifs. Je travaille en collaboration dans des environnements agiles, en livrant constamment un code de haute qualité et en contribuant à l’amélioration du produit grâce à des mises en œuvre UI/UX réfléchies.</p>
+        <div class="u-text-center u-fs-1">LTDS version: <span class="u-text-success" data-version="ltds"></span></div>
         <button class="ltds-btn ltds-btn--primary ltds-btn--lg u-w-full ltds-btn--responsive" data-modal-dismiss>
           <span class="ltds-btn-label">Close</span>
         </button>
