feat:adding three js scene test

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -71,19 +71,21 @@
         import '@tarik-leviathan/ltds/styles/utils';    // utilitaires
         </ltds-code-block>
       </doc-section>
+
+
     </div>
     <!-- <div class="lt-frame-inset-gradient lt-frame-inset-gradient--bottom"></div> -->
-
+    
     <!-- <ltds-divider></ltds-divider> -->
-
+    
     <!-- <doc-section title="Composants Web">
       <p>
         Le Design System fournit également des Web Components.  
         Importez uniquement ceux nécessaires à votre projet :
       </p>
       <ltds-code-block language="js" dedent>
-      import { ModalDialog } from '@tarik-leviathan/ltds';
-      import { PanelMenu } from '@tarik-leviathan/ltds';
+        import { ModalDialog } from '@tarik-leviathan/ltds';
+        import { PanelMenu } from '@tarik-leviathan/ltds';
       </ltds-code-block>
 
       <p class="u-text-secondary u-fs-0">
@@ -93,3 +95,5 @@
 
   </div>
 </section>
+
+<div class="ltds-canvas" id="three-container"></div>
