modifiy three scene adding glow effect and separate file from home

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -37,11 +37,12 @@
         </div>
      </div>
 </section>
-
-<section class="section lt-page">
+<div class="ltds-canvas" id="three-container"></div>
+<section class="section lt-page" id="getting-started">
 
   <!-- data-scheme="3" -->
-  <div class="lt-frame lt-frame--fantasy reveal --scale" style="position: relative;">
+   <!-- lt-frame--fantasy -->
+  <div class="lt-frame  reveal --scale" style="position: relative;">
     <!-- <div class="lt-frame-inset-gradient"></div> -->
     <div class="lt-frame-content">
       <!-- extra-class="--start" -->
@@ -96,4 +97,3 @@
   </div>
 </section>
 
-<div class="ltds-canvas" id="three-container"></div>
