--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="icon" type="image/svg+xml" href="/public/favicon_io/favicon.ico" />
     <title>LTDS Catalog</title>
 
     <!-- Fonts -->
