feat: rework favicon +adding card icons + add icons to menu

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -37,7 +37,7 @@
         </div>
      </div>
 </section>
-<div class="ltds-canvas" id="three-container"></div>
+<!-- <div class="ltds-canvas" id="three-container"></div> -->
 <section class="section lt-page" id="getting-started">
 
   <!-- data-scheme="3" -->
