correctly adjusting remapping to portfolio and fix theme issue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-js.min.js"></script>
   </head>
-  <body data-scheme="3">
+  <body>
     <div id="menu-nav"></div>
     <div id="app">
       <main id="main"></main>
