--- a/src/pages/utilities.html
+++ b/src/pages/utilities.html
@@ -50,16 +50,16 @@
       <p>Classes pour appliquer rapidement des fonds colorés ou semi‑transparents.</p>
       <ltds-code-block language="css" dedent>
       /* Solides */
-      .u-bg-primary { background-color: var(--color-primary); }
+      .u-bg-primary { background-color: var(--brand-primary); }
       .u-bg-success { background-color: var(--color-success); }
       .u-bg-warning { background-color: var(--color-warning); }
       .u-bg-info    { background-color: var(--color-info); }
       .u-bg-danger  { background-color: var(--color-danger); }
 
       /* Opacités */
-      .u-bg-primary-10 { background-color: var(--color-primary-opacity-10); }
-      .u-bg-primary-20 { background-color: var(--color-primary-opacity-20); }
-      .u-bg-primary-40 { background-color: var(--color-primary-opacity-40); }
+      .u-bg-primary-10 { background-color: var(--brand-primary-opacity-10); }
+      .u-bg-primary-20 { background-color: var(--brand-primary-opacity-20); }
+      .u-bg-primary-40 { background-color: var(--brand-primary-opacity-40); }
       .u-bg-success-10 { background-color: var(--color-success-opacity-10); }
       .u-bg-success-20 { background-color: var(--color-success-opacity-20); }
       .u-bg-warning-10 { background-color: var(--color-warning-opacity-10); }
