fix logotype mobile display + fix colors.html doc rebase naming + add check item inside theme switch btns

--- a/src/pages/colors.html
+++ b/src/pages/colors.html
@@ -139,13 +139,13 @@
       :root,
       [data-scheme] {
         /* Primary */
-        --brand-primary:            var(--brand-primary);
-        --brand-primary-hover:      var(--brand-primary-hover);
-        --brand-primary-active:     var(--brand-primary-active);
-        --brand-primary-opacity-4:  var(--brand-primary-opacity-4);
-        --brand-primary-opacity-10: var(--brand-primary-opacity-10);
-        --brand-primary-opacity-20: var(--brand-primary-opacity-20);
-        --brand-primary-opacity-40: var(--brand-primary-opacity-40);
+        --color-primary:            var(--brand-primary);
+        --color-primary-hover:      var(--brand-primary-hover);
+        --color-primary-active:     var(--brand-primary-active);
+        --color-primary-opacity-4:  var(--brand-primary-opacity-4);
+        --color-primary-opacity-10: var(--brand-primary-opacity-10);
+        --color-primary-opacity-20: var(--brand-primary-opacity-20);
+        --color-primary-opacity-40: var(--brand-primary-opacity-40);
 
         /* Borders (theme-aware) */
         --color-border-primary:     var(--brand-primary);
