--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -33,9 +33,18 @@
                 <ul class="ltds-menu-submenu">
                     <h3 class="u-mb-1">Select a theme</h3>
                     <div class="lt-stack lt-stack--gap-2">
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="0">Theme 0</div>
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="1">Iris Mist</div>
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-scheme="2">Azure deep</div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="0">
+                            <span>Theme 0</span>
+                            <i class="icon lt-icon-check icon-size-lg"></i>
+                        </div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="1">
+                            <span>Iris Mist</span>
+                            <i class="icon lt-icon-check icon-size-lg"></i>
+                        </div>
+                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="2">
+                            <span>Azure deep</span>
+                            <i class="icon lt-icon-check icon-size-lg"></i>
+                        </div>
                     </div>
                 </ul>
             </li>
