feat: adding a lightmode factory-tested

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- data-type-scale -->
+ <!-- data-mode="dark" -->
 <html lang="en" data-font="leviathan">
   <head>
     <meta charset="UTF-8" />
@@ -32,7 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-css.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/components/prism-js.min.js"></script>
   </head>
-  <body>
+  <body data-mode="dark">
     <div id="menu-nav"></div>
     <div id="app">
       <main id="main"></main>
