--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -42,7 +42,7 @@
 
   <!-- data-scheme="3" -->
    <!-- lt-frame--fantasy -->
-  <div class="lt-frame  reveal --scale" style="position: relative;">
+  <div class="lt-frame lt-frame--accentuated  reveal --scale" style="position: relative;">
     <!-- <div class="lt-frame-inset-gradient"></div> -->
     <div class="lt-frame-content">
       <!-- extra-class="--start" -->
