fix navbar border

--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -34,7 +34,7 @@
                     <h3 class="u-mb-1">Select a theme</h3>
                     <div class="lt-stack lt-stack--gap-2">
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="0">
-                            <span>Theme 0</span>
+                            <span>Default</span>
                             <i class="icon lt-icon-check icon-size-lg"></i>
                         </div>
                         <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="1">
@@ -84,7 +84,7 @@
                     <div class="lt-frame lt-frame--gap-2">
                         <h3 class="ltds-menu-item">Select a theme</h3>
                         <div class="lt-stack lt-stack--gap-2">
-                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="0">Theme 0</div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="0">Default</div>
                             <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="1">Iris Mist</div>
                             <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="2">Azure deep</div>
                         </div>
