--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -1,18 +1,16 @@
 <nav class="navbar u-mob-p-3" style="position: sticky;">
     <div class="navbar-left">
         <a href="/" class="u-display-flex">
-            <!-- <img id="page-logotype" src="/assets/pictures/logotype-ltds.svg" alt="logo" width="48"> -->
-             <div id="page-logotype">
-                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M32 10.5288L18.5 3L5 10.5288V25.5865L18.5 33.1154L32 25.5865V10.5288Z" stroke="url(#paint0_linear_2345_58)" stroke-opacity="0.8" stroke-width="1.5" stroke-linecap="square"/>
-                    <path d="M8.4876 23.2308V13.6108H10.0996V23.2308H8.4876ZM12.2914 23.2308V14.6378H13.8904V23.2308H12.2914ZM10.9394 17.8618V16.3798H15.3854V17.8618H10.9394ZM18.9057 23.3608C18.299 23.3608 17.753 23.2091 17.2677 22.9058C16.791 22.5938 16.4097 22.1734 16.1237 21.6448C15.8463 21.1074 15.7077 20.4921 15.7077 19.7988C15.7077 19.1141 15.8463 18.5031 16.1237 17.9658C16.401 17.4284 16.778 17.0081 17.2547 16.7048C17.74 16.3928 18.286 16.2368 18.8927 16.2368C19.222 16.2368 19.5383 16.2888 19.8417 16.3928C20.1537 16.4968 20.431 16.6398 20.6737 16.8218C20.9163 16.9951 21.107 17.1901 21.2457 17.4068C21.393 17.6234 21.4753 17.8488 21.4927 18.0828L21.0637 18.1348V13.6108H22.6627V23.2308H21.1157L21.0767 21.6188L21.3887 21.6448C21.38 21.8614 21.302 22.0694 21.1547 22.2688C21.016 22.4681 20.834 22.6501 20.6087 22.8148C20.3833 22.9794 20.119 23.1138 19.8157 23.2178C19.521 23.3131 19.2177 23.3608 18.9057 23.3608ZM19.2177 22.0088C19.5903 22.0088 19.9197 21.9134 20.2057 21.7228C20.4917 21.5321 20.7127 21.2721 20.8687 20.9428C21.0333 20.6134 21.1157 20.2321 21.1157 19.7988C21.1157 19.3741 21.0333 18.9971 20.8687 18.6678C20.7127 18.3298 20.4917 18.0698 20.2057 17.8878C19.9197 17.6971 19.5903 17.6018 19.2177 17.6018C18.845 17.6018 18.5157 17.6971 18.2297 17.8878C17.9437 18.0698 17.7183 18.3298 17.5537 18.6678C17.3977 18.9971 17.3197 19.3741 17.3197 19.7988C17.3197 20.2321 17.3977 20.6134 17.5537 20.9428C17.7183 21.2721 17.9437 21.5321 18.2297 21.7228C18.5157 21.9134 18.845 22.0088 19.2177 22.0088ZM26.3758 23.3608C25.7691 23.3608 25.2231 23.2611 24.7378 23.0618C24.2611 22.8538 23.8711 22.5591 23.5678 22.1778L24.6078 21.2808C24.8678 21.5754 25.1581 21.7878 25.4788 21.9178C25.7995 22.0478 26.1375 22.1128 26.4928 22.1128C26.6401 22.1128 26.7701 22.0954 26.8828 22.0608C27.0041 22.0261 27.1081 21.9741 27.1948 21.9048C27.2815 21.8354 27.3465 21.7574 27.3898 21.6708C27.4418 21.5754 27.4678 21.4714 27.4678 21.3588C27.4678 21.1508 27.3898 20.9861 27.2338 20.8648C27.1471 20.8041 27.0085 20.7391 26.8178 20.6698C26.6358 20.6004 26.3975 20.5311 26.1028 20.4618C25.6348 20.3404 25.2448 20.2018 24.9328 20.0458C24.6208 19.8811 24.3781 19.6991 24.2048 19.4998C24.0575 19.3351 23.9448 19.1488 23.8668 18.9408C23.7975 18.7328 23.7628 18.5074 23.7628 18.2648C23.7628 17.9614 23.8278 17.6884 23.9578 17.4458C24.0965 17.1944 24.2828 16.9778 24.5168 16.7958C24.7508 16.6138 25.0238 16.4751 25.3358 16.3798C25.6478 16.2844 25.9728 16.2368 26.3108 16.2368C26.6575 16.2368 26.9911 16.2801 27.3118 16.3668C27.6411 16.4534 27.9445 16.5791 28.2218 16.7438C28.5078 16.8998 28.7505 17.0904 28.9498 17.3158L28.0658 18.2908C27.9011 18.1348 27.7191 17.9961 27.5198 17.8748C27.3291 17.7534 27.1341 17.6581 26.9348 17.5888C26.7355 17.5108 26.5491 17.4718 26.3758 17.4718C26.2111 17.4718 26.0638 17.4891 25.9338 17.5238C25.8038 17.5498 25.6955 17.5931 25.6088 17.6538C25.5221 17.7144 25.4528 17.7924 25.4008 17.8878C25.3575 17.9744 25.3358 18.0784 25.3358 18.1998C25.3445 18.3038 25.3705 18.4034 25.4138 18.4988C25.4658 18.5854 25.5351 18.6591 25.6218 18.7198C25.7171 18.7804 25.8601 18.8498 26.0508 18.9278C26.2415 19.0058 26.4885 19.0794 26.7918 19.1488C27.2165 19.2614 27.5718 19.3871 27.8578 19.5258C28.1438 19.6644 28.3691 19.8248 28.5338 20.0068C28.6985 20.1628 28.8155 20.3448 28.8848 20.5528C28.9541 20.7608 28.9888 20.9904 28.9888 21.2418C28.9888 21.6491 28.8718 22.0131 28.6378 22.3338C28.4125 22.6544 28.1005 22.9058 27.7018 23.0878C27.3118 23.2698 26.8698 23.3608 26.3758 23.3608Z" fill="var(--brand-primary)"/>
-                    <defs>
-                    <linearGradient id="paint0_linear_2345_58" x1="18.5" y1="3" x2="18.5" y2="33.1154" gradientUnits="userSpaceOnUse">
-                    <stop stop-color="var(--brand-primary)"/>
-                    <stop offset="1" stop-color="var(--brand-primary-active)"/>
-                    </linearGradient>
-                    </defs>
+            <!-- <img id="page-logotype" src="/assets/pictures/logotype-2.svg" alt="logo" width="48"> -->
+            <div id="page-logotype" class="lt-stack lt-stack--center lt-stack--gap-2 u-text-lowercase">
+                <svg width="26" height="30" viewBox="0 0 26 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7.99023 24H3.99023V13L7.99023 8.5V24ZM5.49023 13.5693V22.5H6.49023V12.4443L5.49023 13.5693Z" fill="var(--brand-primary)"/>
+                <path d="M17.9902 24H21.9902V13L17.9902 8.5V24ZM20.4902 13.5693V22.5H19.4902V12.4443L20.4902 13.5693Z" fill="var(--brand-primary)"/>
+                <path d="M16.7402 13.25V24H15.2402V14.75H10.7402V24H9.24023V13.25H16.7402ZM13.7402 17V24H12.2402V17H13.7402Z" fill="var(--brand-primary)"/>
+                <path d="M15.2402 7.8291L12.9902 5.16211L10.7402 7.8291V11.25H15.2402V7.8291ZM16.7402 12.75H9.24023V7.28125L9.41699 7.07227L12.9902 2.83691L16.5635 7.07227L16.7402 7.28125V12.75Z" fill="var(--brand-primary)"/>
+                <path d="M25.9805 7.5V22.5L12.9902 30L0 22.5V7.5L12.9902 0L25.9805 7.5ZM1.5 8.36523V21.6338L12.9902 28.2676L24.4805 21.6338V8.36523L12.9902 1.73145L1.5 8.36523Z" fill="var(--brand-primary)"/>
                 </svg>
+                <h2 style="letter-spacing:-0.01rem;">LTDS</h2>
              </div>
         </a>
     </div>
@@ -78,24 +76,37 @@
 
             <div class="panel-menu">
                 <div class="lt-frame u-p-4">
-                    <h3 class="u-text-primary">Bases</h3>
-                    <ul class="lt-stack lt-stack--gap-2" id="mobile-menu"></ul>
+                    <div class="lt-frame">
+                        <h3 class="u-text-primary">Bases</h3>
+                        <ul class="lt-stack lt-stack--gap-2" id="mobile-menu"></ul>
+                    </div>
                     <ltds-divider></ltds-divider>
-                    <div class="lt-frame lt-frame--gap-2">
-                        <h3 class="ltds-menu-item">Select a theme</h3>
+                    <div class="lt-frame">
+                        <h3>Select a theme</h3>
                         <div class="lt-stack lt-stack--gap-2">
-                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="0">Default</div>
-                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="1">Iris Mist</div>
-                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-scheme="2">Azure deep</div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-switch data-scheme="0">
+                                Default
+                                <i class="icon lt-icon-check icon-size-lg"></i>
+                            </div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-switch data-scheme="1">
+                                Iris Mist
+                                <i class="icon lt-icon-check icon-size-lg"></i>
+                            </div>
+                            <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--outline ltds-btn--rounded" data-switch data-scheme="2">
+                                Azure deep
+                                <i class="icon lt-icon-check icon-size-lg"></i>
+                            </div>
                         </div>
                     </div>
                     <ltds-divider></ltds-divider>
-                    <div class="ltds-menu-label">
-                        <span class="u-fs-0 u-text-secondary" id="modeLabelMobile">Dark</span>
-                        <label class="ltds-switch">
-                            <input type="checkbox" id="modeToggleMobile">
-                            <span class="slider"></span>
-                        </label>
+                    <div class="lt-frame">
+                        <h3 id="modeLabelMobile">Dark</h3>
+                        <div class="ltds-menu-label">
+                            <label class="ltds-switch">
+                                <input type="checkbox" id="modeToggleMobile">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
                     </div>
                     <ltds-divider></ltds-divider>
                     <div class="u-fs-1">LTDS version: <span class="u-text-success" data-version="ltds"></span></div>
