--- a/src/parts/navbar.html
+++ b/src/parts/navbar.html
@@ -25,27 +25,6 @@
                     <div id="desktop-menu" class="u-grid u-grid-12"></div>
                 </ul>
             </li>
-
-            <li>
-                <div class="ltds-menu-label">Themes<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
-                <ul class="ltds-menu-submenu">
-                    <h3 class="u-mb-1">Select a theme</h3>
-                    <div class="lt-stack lt-stack--gap-2">
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="0">
-                            <span>Default</span>
-                            <i class="icon lt-icon-check icon-size-lg"></i>
-                        </div>
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="1">
-                            <span>Iris Mist</span>
-                            <i class="icon lt-icon-check icon-size-lg"></i>
-                        </div>
-                        <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="2">
-                            <span>Azure deep</span>
-                            <i class="icon lt-icon-check icon-size-lg"></i>
-                        </div>
-                    </div>
-                </ul>
-            </li>
     
             <!-- <li>
                 <div class="ltds-menu-label">Atoms<i class="icon lt-icon-caret-down icon-size-lg"></i></div>
@@ -58,15 +37,10 @@
             <button class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm" data-modal-ref="modal-test">
                 <i class="icon lt-icon-about icon-size-lg"></i>
             </button>
-            <li>
-                <div class="ltds-menu-label">
-                    <span class="u-fs-0 u-text-secondary" id="modeLabel">Dark</span>
-                    <label class="ltds-switch">
-                        <input type="checkbox" id="modeToggle">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-            </li>
+            <button class="ltds-btn ltds-btn--ghost ltds-btn--shape ltds-btn--sm" data-modal-ref="modal-nav-settings">
+                <i class="icon lt-icon-settings icon-size-lg"></i>
+            </button>
+
         </ul>
         <!-- menu mobile burger  -->
         <panel-menu origin="right" header="Navigation">
