--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                     <span>Azure deep</span>
                     <i class="icon lt-icon-check icon-size-lg"></i>
                 </div>
+                <div class="theme-switch ltds-btn ltds-btn--sm ltds-btn--rounded ltds-btn--outline" data-switch data-scheme="3">
+                    <span>Ardoise</span>
+                    <i class="icon lt-icon-check icon-size-lg"></i>
+                </div>
             </div>
         </div>
         <ltds-divider></ltds-divider>
