feat:change logotype

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- LTDS depuis node_modules -->
     <link rel="stylesheet" href="/src/css/vendor-ltds.css" />
 
-    <!-- Ton CSS custom (après pour overrides) -->
+    <!-- CSS custom (overrides) -->
     <link rel="stylesheet" href="src/css/style.css" />
     <link rel="stylesheet" href="/icon-font/icons.css" />
 
@@ -54,7 +54,7 @@
     <div id="footer"></div>
     <div id="overlays">
       <button class="ltds-btn ltds-btn--gradient ltds-btn--shape-circle" id="scrollToTop" style="display: flex;">
-        <i class="icon lt-icon-top-arrow icon-size-lg"></i>
+        <i class="icon lt-icon-top-arrow icon-size-xl"></i>
       </button>
     </div>
 
@@ -71,7 +71,7 @@
 
 
     <modal-dialog id="modal-nav-settings" modal-title="Ui Settings" class="modal modal-color-scheme-primary" max-width="auto">
-      <div class="lt-frame lt-frame--gap-6">
+      <div class="lt-frame lt-frame--gap-6 u-min-w-l-5">
         <div class="lt-frame">
             <h3>Select a theme</h3>
             <div class="lt-stack lt-stack--gap-2">
