--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,6 +1,6 @@
-<section class="section u-flex u-tab-flex-col" style="min-height: 88vh;height: auto;">
-     <div class="u-p-12 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
-         <div class="lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
+<section class="section u-flex lt-page u-tab-flex-col" style="min-height: 88vh;height: auto;">
+     <div class="u-p-8 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
+         <div class="u-max-w-l-6 lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
             <!-- class="u-text-gradient-primary" -->
              <h1 id="page-title" class="u-fs-8 u-mob-fs-6 u-text-tab-center reveal">LTDS Design System</h1>
              <div class="lt-frame lt-frame--mob-items-center">
@@ -23,7 +23,7 @@
         <div class="splide u-w-full u-h-full u-p-8 u-tab-p-0" aria-label="Splide Basic HTML Example">
             <div class="splide__track u-h-full">
                 <ul class="splide__list">
-                    <li class="splide__slide ltds-card ltds-card--lg ltds-card--no-border u-mob-p-0">
+                    <li class="splide__slide ltds-card ltds-card--lg u-mob-p-0">
                         <div class="ltds-card-grid u-h-full"></div>
                     </li>
                     <li class="splide__slide">
