--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,4 +1,4 @@
-<section class="section u-flex lt-page u-tab-flex-col" style="min-height: 88vh;height: auto;">
+<section class="section u-flex lt-page u-tab-flex-col" style="min-height: calc(100vh - 80px);height: auto;">
      <div class="u-p-8 u-tab-p-6 u-m-auto lt-stack u-h-full u-basis-2-3">
          <div class="u-max-w-l-6 lt-frame lt-frame--gap-8 lt-frame--tab-items-center u-m-auto">
             <!-- class="u-text-gradient-primary" -->
@@ -19,7 +19,7 @@
              </div>
         </div>
      </div>
-     <div class="lt-stack u-tab-p-6 u-w-full">
+     <div class="lt-stack u-tab-p-6 u-mob-p-0 u-w-full">
         <div class="splide u-w-full u-h-full u-p-8 u-tab-p-0" aria-label="Splide Basic HTML Example">
             <div class="splide__track u-h-full">
                 <ul class="splide__list">
